--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,7 @@
 	path = deps/spdlog
 	url = https://github.com/4iwen/spdlog/
 	branch = v1.x
+[submodule "deps/glm"]
+	path = deps/glm
+	url = https://github.com/4iwen/glm
+	branch = master
